<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prism Lights</string>
    <string name="home">Home</string>
    <string name="music">Music</string>
    <string name="bridge_list">Available Bridges</string>
    <string name="push_button">Push the Button on the Bridge to Authenticate</string>
    <string name="change_state">Turn On/Off</string>
    <string name="select_color">Select Color</string>
    <string name="name_label">Name:</string>
    <string name="brightness">Brightness:</string>
    <string name="searching">Searching for Bridge...</string>
    <string name="connecting">Connecting to Bridge...</string>
    <string name="no_bridge_found">No Bridge Found</string>
    <string name="no_bridge_message">Please make sure you are on a local network with the bridge properly connected to the router.</string>
    <string name="connection_lost">Connection to Bridge Lost</string>
    <string name="connection_lost_message">Your connection to the bridge was lost. Any changes you make will not be sent to the bridge. Please make sure you are on a local network with the bridge properly connected to the router.</string>
    <string name="connection_found">Connection to Bridge Reestablished</string>
    <string name="connection_found_message">Your connection has been reestablished. Changes will now be sent to the bridge.</string>
    <string name="advanced_setting">Advanced</string>
    <string name="voice">Voice Control</string>
    <string name="waiting">Waiting...</string>
    <string name="listening">Listening...</string>
    <string name="processing">Processing...</string>
    <string name="search_for_bridges">Search For Bridges</string>
    <string name="action_settings">Settings</string>
    <string name="btn_ok">Ok</string>
    <string name="title_error">Error</string>
    <string name="sending_progress">Sending to Bridge...</string>
    <string name="txt_alarm_deleted">Alarm removed successfully</string>
    <string name="txt_alarm_created">Alarm created successfully</string>
    <string name="txt_alarm_updated">Alarm updated successfully</string>
    <string name="txt_timer_deleted">Timer removed successfully</string>
    <string name="txt_timer_created">Timer created successfully</string>
    <string name="txt_timer_updated">Timer updated successfully</string>
    <string name="txt_schedule_deleted">Schedule removed successfully</string>
    <string name="txt_schedule_created">Schedule created successfully</string>
    <string name="txt_schedule_updated">Schedule updated successfully</string>
    <string name="txt_result">Result</string>
    <string name="txt_alarm_description">Alarm</string>
    <string name="txt_button_sun">S</string>
    <string name="txt_button_mon">M</string>
    <string name="txt_button_tue">T</string>
    <string name="txt_button_wed">W</string>
    <string name="txt_button_thu">T</string>
    <string name="txt_button_fri">F</string>
    <string name="txt_button_sat">S</string>
    <string name="btn_timer_time">Choose Time</string>
    <string name="time_sync_error">Time Sync Error</string>
    <string name="time_sync_error_message">The bridge and your mobile device have different time.
        Please Connect your Bridge or Device to Internet.</string>

    <string name="addFavorite">Add Current State as Favorite</string>
    <string name="select_bulb">Select Bulbs</string>
    <string name="done">Done</string>
    <string name="lights">Lights</string>
    <string name="favorites">Favorites</string>
    <string name="groups">Groups</string>
    <string name="edit_groups">Edit Groups</string>
    <string name="add_group">Add Group</string>
    <string name="edit_lights">Edit Lights</string>
    <string name="add_light">Add New Lights</string>
    <string name="edit_favorite">Edit Favorite</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="adding_group">Adding Group...</string>
    <string name="search_for_lights">Search For Lights</string>
    <string name="serial_codes">New Light Serial Codes</string>
    <string name="cancel">Cancel</string>
    <string name="add_serial_code">Add Serial Code</string>
    <string name="searching_for_new_lights">Searching for lights...</string>
    <string name="select_all">Select All</string>
    <string name="group_label">Group:</string>
    <string name="editing_group">Editing Group...</string>
    <string name="edit_group">Edit Group</string>
    <string name="authenticationFailed">Authentication Failed</string>
    <string name="authenticationFailedExplanation">You did not push the button on the bridge in time. If you would like to connect, please search for bridges again.</string>
    <string name="no_add_group">Unable to Add Group</string>
    <string name="no_add_group_explanation">Only 16 groups are supported. Please remove or edit an existing group.</string>
    <string name="delete_group">Deleting Groups...</string>
    <string name="color_cycles">Color Cycles</string>
    <string name="color_cycles_label">Color Cycles</string>
    <string name="run">Run</string>
    <string name="could_not_connect">Failed to Connect</string>
    <string name="could_not_connect_explanation">Failed to connect to bridge. Please make sure your bridge is plugged directly into the router.</string>
    <string name="failed_create_schedule">Failed to create schedule</string>
    <string name="failed_update_schedule">Failed to update schedule</string>
    <string name="failed_create_alarm">Failed to create alarm</string>
    <string name="failed_delete_alarm">Failed to delete alarm</string>
    <string name="failed_update_alarm">Failed to update alarm</string>
    <string name="failed_delete_schedule">Failed to delete schedule</string>
    <string name="failed_timer_create">Failed to create timer</string>
    <string name="failed_timer_delete">Failed to delete timer</string>
    <string name="setTimer">Set Timer</string>
</resources>
