<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.lights.prism.com.prismlights.ScheduleConfigFragment"
    android:background="@android:color/black">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/name_label"
                android:id="@+id/textView3"
                android:textSize="17sp"
                android:textColor="@android:color/white"
                android:gravity="center_vertical" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/nameEditor"
                android:inputType="textCapWords" />
        </LinearLayout>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_state"
            android:id="@+id/bulbOnState" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brightness"
            android:id="@+id/textView4"
            android:textSize="17sp"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <SeekBar
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/brightness" />

            <TextView
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="100%"
                android:id="@+id/brightnessLabel"
                android:textSize="17sp"
                android:textColor="@android:color/white"
                android:gravity="center_vertical|bottom|end"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/select_color"
                android:id="@+id/colorLabel"
                android:textSize="17sp"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:id="@+id/currentColor"
                />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="278dp"
            android:id="@+id/colorPickerImage"
            android:src="@drawable/tempcolorpicker"
            android:adjustViewBounds="true"
            android:layout_gravity="bottom" />

        <LinearLayout
            android:id="@+id/linearLayRecurringDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Days"
                android:id="@+id/textView6"
                android:layout_weight="0.91"
                android:gravity="center" />

            <ToggleButton
                android:id="@+id/btnSun"
                style="@style/TabLikeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/txt_button_sun"
                android:textOn="@string/txt_button_sun"
                android:textStyle="bold" />

            <ToggleButton
                android:id="@+id/btnMon"
                style="@style/TabLikeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/txt_button_mon"
                android:textOn="@string/txt_button_mon"
                android:textStyle="bold" />

            <ToggleButton
                android:id="@+id/btnTue"
                style="@style/TabLikeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/txt_button_tue"
                android:textOn="@string/txt_button_tue"
                android:textStyle="bold" />

            <ToggleButton
                android:id="@+id/btnWed"
                style="@style/TabLikeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/txt_button_wed"
                android:textOn="@string/txt_button_wed"
                android:textStyle="bold" />

            <ToggleButton
                android:id="@+id/btnThur"
                style="@style/TabLikeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/txt_button_thu"
                android:textOn="@string/txt_button_thu"
                android:textStyle="bold" />

            <ToggleButton
                android:id="@+id/btnFri"
                style="@style/TabLikeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/txt_button_fri"
                android:textOn="@string/txt_button_fri"
                android:textStyle="bold" />

            <ToggleButton
                android:id="@+id/btnSat"
                style="@style/TabLikeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/txt_button_sat"
                android:textOn="@string/txt_button_sat"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Time"
                android:id="@+id/textView7"
                android:layout_weight="0.59"
                android:gravity="center" />

            <Button
                android:id="@+id/btnTimerTime"
                android:layout_width="261dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:text="@string/btn_timer_time"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:text="Save"
        android:id="@+id/buttonSave"
        android:layout_gravity="center_horizontal|bottom"
        android:textSize="24dp" />

</FrameLayout>
