<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_light"
        android:textSize="30sp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/lightTeal"
        android:paddingBottom="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/serial_codes"
            android:textSize="20sp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"/>
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:src="@drawable/plus_button"
            android:layout_gravity="center_vertical"
            android:background="@drawable/top_button"
            android:scaleType="centerInside"
            android:id="@+id/addSerialCodeButton"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/serialCodeListView"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_for_lights"
        android:background="@drawable/buttons"
        android:padding="15dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:id="@+id/searchLightsButton"/>
</LinearLayout>