<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.lights.prism.com.prismlights.LightSettingsFragment"
    android:background="@android:color/black">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_label"
                android:id="@+id/textView3" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nameEditor"
                android:layout_gravity="center_horizontal"
                android:inputType="textCapWords" />
        </LinearLayout>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_state"
            android:id="@+id/bulbOnState" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brightness"
            android:id="@+id/textView4" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <SeekBar
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/brightness" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="0%"
                android:id="@+id/brightnessLabel" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/select_color"
                android:id="@+id/colorLabel" />

            <View
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:id="@+id/currentColor"
                />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/colorPickerImage"
            android:src="@drawable/tempcolorpicker"
            android:adjustViewBounds="true"
            android:layout_gravity="bottom" />

    </LinearLayout>

</FrameLayout>
